# video-analyzer-llm

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  analyzer.py  asker.py  config.py  context.py  downloader.py  extractor.py  frame_extractor.py  main.py  pyproject.toml  requirements.txt  server.py  session.py  transcript_selector.py
src/screenscribe/: config.py  gemini_selector.py  main.py  resolver.py  server.py  session.py  structured_extractor.py  transcript_selector.py
src/screenscribe/schemas/: chapters.json  cli_commands.json  code_blocks.json  final_config.json  recipe.json  resources_mentioned.json  step_sequence.json
tests/: test_gemini_selector.py  test_resolver.py  test_structured_extractor.py
